--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,6 @@
 php_value date.timezone "Europe/Moscow"
 
-DirectoryIndex index.html
+DirectoryIndex index.htm
 AddDefaultCharset UTF-8
 Options -Indexes
 
